fix: add shareID param, rename mediaID to contentID
